--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,71 @@
-google_images_download==2.5.0
-wikipedia==1.4.0
-nltk==3.4.5
-watson_developer_cloud==2.8.0
+async-generator==1.10
+attrs==21.2.0
+beautifulsoup4==4.10.0
+blis==0.7.5
+cachetools==4.2.4
+catalogue==2.0.6
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+click==8.0.3
+cryptography==35.0.0
+cymem==2.0.6
 google-api-python-client==1.7.8
+google-auth==2.3.3
+google-auth-httplib2==0.1.0
+google-images-download==2.8.0
+h11==0.12.0
+httplib2==0.20.2
+idna==3.3
+jellyfish==0.8.9
+Jinja2==3.0.3
+joblib==1.1.0
+langcodes==3.3.0
+MarkupSafe==2.0.1
+murmurhash==1.0.6
+networkx==2.6.3
+nltk==3.4.5
+numpy==1.21.4
 oauth2client==4.1.3
+outcome==1.1.0
+packaging==21.2
+pathy==0.6.1
+Pillow==8.4.0
+preshed==3.0.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==1.8.2
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+rake-nltk==1.0.6
+regex==2021.11.10
+requests==2.26.0
+rsa==4.7.2
+segtok==1.5.10
+selenium==4.0.0
+six==1.16.0
+smart-open==5.2.1
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+spacy==3.2.0
+spacy-legacy==3.0.8
+spacy-loggers==1.0.1
+srsly==2.4.2
+tabulate==0.8.9
+thinc==8.0.13
+tqdm==4.62.3
+trio==0.19.0
+trio-websocket==0.9.2
+typer==0.4.0
+typing-extensions==3.10.0.2
+uritemplate==3.0.1
+urllib3==1.26.7
+wasabi==0.8.2
+watson-developer-cloud==2.8.0
+websocket-client==0.48.0
+wikipedia==1.4.0
+wsproto==1.0.0
+yake==0.4.8
